# DAGU-Cron_to_DAG

./: PAT.txt  README.md  pyproject.toml  requirements.txt  setup.py
src/dagu_cron.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/dagu_cron_Aditya07/: main.py  new_dag.py
