[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dagu-cron"
version = "0.1.0"
description = "A tool to convert CRONTAB jobs to DAGU DAGs"
authors = [
    { name = "Aditya Thapliyal", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"
keywords = ["CRONTAB", "DAG", "DAGU", "scheduling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/Aditya060/DAGU-Cron_to_DAG"
repository = "https://github.com/Aditya060/DAGU-Cron_to_DAG"
documentation = "https://github.com/Aditya060/DAGU-Cron_to_DAG/wiki"

[project.dependencies]
click = "^8.0"
pyyaml = "^5.4"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"
testpaths = [
    "tests"
]
